# Fabrication-utilities

./: .cruft.json  Items.archive.yaml  LICENSE  MANIFEST.in  README.md  equipment_schema_revised.archive.yaml  mkdocs.yml  move_template_files.sh  process_steps_schema_revised.archive.yaml  pyproject.toml
.github/workflows/: cruft-update.yml
docs/: index.md
docs/how_to/: contribute_to_the_documentation.md  contribute_to_this_plugin.md  install_this_plugin.md
src/fabrication_facilities/apps/: .stepapp.py.swp  __init__.py  addapp.py  carachterapp.py  char_directories.py  charact_equipmentapp.py  characterapp.py  directories.py  equipmentapp.py  menu_steps.py  processapp.py  removeapp.py  stepapp.py  transapp.py
src/fabrication_facilities/apps/characterization/: __init__.py  characterapp.py  equipmentapp.py
src/fabrication_facilities/apps/fabrication/: __init__.py  addapp.py  directories.py  equipmentapp.py  menu_steps.py  processapp.py  removeapp.py  stepapp.py  transapp.py
src/fabrication_facilities/normalizers/: __init__.py  normalizer.py
src/fabrication_facilities/parsers/: __init__.py  parser.py
src/fabrication_facilities/schema_packages/: .remove.py.swp  Items.py  __init__.py  add.py  equipment.py  equipments.py  fabrication_old.py  fabrication_steps.py  fabrication_utilities.py  materials.py  remove.py  schema_package.py  transform.py  utils.py
src/fabrication_facilities/schema_packages/calculus/: calculus.py
src/fabrication_facilities/schema_packages/equipments/: character_equipment.py  equipments.py  utils.py
src/fabrication_facilities/schema_packages/steps/: add.py  character.py  remove.py  transform.py  utils.py
src/fabrication_facilities/schema_packages/steps/add/: __init__.py  add.py
src/fabrication_facilities/schema_packages/steps/add/synthesis/: CVD.py  __init__.py  coating.py  sputtering_catania.py
src/fabrication_facilities/schema_packages/steps/remove/: __init__.py
src/fabrication_facilities/schema_packages/steps/remove/developing/: development.py
src/fabrication_facilities/schema_packages/steps/remove/drying/: __init__.py  drying.py
src/fabrication_facilities/schema_packages/steps/remove/etching/: __init__.py  dry_etching.py  stripping.py  wet_etching.py
src/fabrication_facilities/schema_packages/steps/synthesis/: CVD.py  __init__.py  coating.py
tests/apps/: test_app.py
tests/data/: icp.archive.yaml  test.archive.yaml
tests/parsers/: test_parser.py
tests/schema_packages/: test_schema_package.py
